# secure-checker

./: Cargo.toml
src/: local_storage.rs  main.rs  util.rs  veda.rs  view.rs
templates/: index.html  styles.css  win.index.html
veda_service/: Cargo.toml  README.md  veda-open-api.yaml
veda_service/.openapi-generator/: FILES
veda_service/docs/: AddFieldToIndividual200Response.md  AddFieldToIndividualRequest.md  AuthenticateGet200Response.md  DefaultApi.md  ExecuteFullTextQuery200Response.md  ExecuteFullTextQuery400Response.md  ExecuteFullTextQueryRequest.md  GetMembership200Response.md  GetMembership200ResponseRdfTypeInner.md  GetMultipleIndividualsRequest.md  GetTicketForUser200Response.md  GetTicketForUser473Response.md  PutIndividual200Response.md  PutIndividualRequest.md  PutMultipleIndividualsRequest.md  RemoveFieldFromIndividualRequest.md  RemoveIndividual200Response.md  RemoveIndividualRequest.md  SetFieldInIndividual200Response.md  SetFieldInIndividualRequest.md
veda_service/src/apis/: configuration.rs  default_api.rs
veda_service/src/models/: _authenticate_get_200_response.rs  add_field_to_individual_200_response.rs  add_field_to_individual_request.rs  execute_full_text_query_200_response.rs  execute_full_text_query_400_response.rs  execute_full_text_query_request.rs  get_membership_200_response.rs  get_membership_200_response_rdf_type_inner.rs  get_multiple_individuals_request.rs  get_ticket_for_user_200_response.rs  get_ticket_for_user_473_response.rs  mod.rs  put_individual_200_response.rs  put_individual_request.rs  remove_individual_200_response.rs  (+5 more)
