[package]
name = "secure-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full"] }
openapi = { path = "./veda_service"}
askama = "0.12.1"
tinyfiledialogs = "=3.8.3"
web-view = "0.7.0"
