[package]
name = "secure-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
openapi = { path = "./veda_service"}
askama = "0.12.1"
tinyfiledialogs = "=3.8.3"
web-view = "0.7.0"
serde_json = "1.0"
ring = "0.17.8"
hex = "0.4.3"
chrono = "0.4.35"
clap = { version = "4.5", features = ["cargo"] }
system_shutdown = "4.0.1"
base58 = "0.2.0"
url = "2.5.0"
